--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -3,8 +3,7 @@ kind: Deployment
 metadata:
   name: vprodb
   labels:
-    app: vprodb # This label is going to be for our service definition file , so we are going to create a service of type Clsuter IP, and our
-                # service is goign to route the request to any pod that has this label, for DB Service.
+    app: vprodb 
 spec:
   selector:
     matchLabels:
@@ -15,12 +14,14 @@ spec:
       labels:
         app: vprodb
     spec:
+      nodeSelector:
+        zone: us-east-1a
       containers:
       - name: vprodb
         image: haimmanos/vprofiledb:V1
         volumeMounts:
-         - mountPath: /var/lib/mysql
-           name: vpro-db-data
+          - mountPath: /var/lib/mysql
+            name: vpro-db-data
         ports:
           - name: vprodb-port
             containerPort: 3306
@@ -30,18 +31,15 @@ spec:
               secretKeyRef:
                 name: app-secret
                 key: db-pass
-        nodeSelector:
-          zone: us-east-1a
-        volumes:
-         - name: vpro-db-data
-           awsElasticBlockStore:
-            volumeID:  vol-0e926555b474953bb
-            fsType: ext4
+      volumes:
+      - name: vpro-db-data
+        awsElasticBlockStore:
+          volumeID: vol-0e926555b474953bb
+          fsType: ext4
       initContainers:
-        - name: busybox
-          image: busybox:latest
-          args: ["rm", "-rf", "var/lib/mysql/lost+founds"]
-          volumeMounts:
-           - name: vpro-db-data
-             mountPath: /var/lib/mysql
-
+      - name: busybox
+        image: busybox:latest
+        args: ["rm", "-rf", "/var/lib/mysql/lost+found"]
+        volumeMounts:
+          - name: vpro-db-data
+            mountPath: /var/lib/mysql
