--- a/vproappdep.yaml
+++ b/vproappdep.yaml
@@ -27,8 +27,15 @@ spec:
       initContainers:
       - name: init-mydb
         image: busybox
-        command: ['sh', '-c', 'until nslookup vprodb; do echo waiting for mydb; sleep 2; done;']
+        command:
+        - sh
+        - -c
+        args:
+        - 'until nslookup vprodb; do echo waiting for mydb; sleep 2; done;'
       - name: init-memcache
         image: busybox
-        command: ['sh', '-c', 'until nslookup vprocache01; do echo waiting for mydb; sleep 2; done;']
-
+        command:
+        - sh
+        - -c
+        args:
+        - 'until nslookup vprocache01; do echo waiting for memcache; sleep 2; done;'
