--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -21,6 +21,9 @@ spec:
         - mountPath: /var/lib/mysql
           name: vpro-db-data
         resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
           limits:
             memory: "128Mi"
             cpu: "500m"
@@ -44,9 +47,14 @@ spec:
       - name: busybox
         image: busybox:latest
         args:
-        - rm
-        - -rf
-        - /var/lib/mysql
+        - sh
+        - -c
+        - |
+          if [ -d /var/lib/mysql ]; then
+            rm -rf /var/lib/mysql;
+          else
+            echo "Directory /var/lib/mysql does not exist, skipping deletion";
+          fi
         volumeMounts:
         - name: vpro-db-data
           mountPath: /var/lib/mysql
