--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: vprodb
-        image: haimmanos/vprofileapp:latest
+        image: haimmanos/vprofiledb:latest
         volumeMounts:
         - mountPath: /var/lib/mysql
           name: vpro-db-data
