--- a/vproappdep.yaml
+++ b/vproappdep.yaml
@@ -19,8 +19,8 @@ spec:
         image: haimmanos/vprofileapp:latest
         resources:
           limits:
-            memory: "512Mi"
-            cpu: "500m"
+            memory: "1Gi"
+            cpu: "1000m"
         ports:
         - name: vproapp-port
           containerPort: 8080
