--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -27,7 +27,8 @@ spec:
             memory: "256Mi"
             cpu: "250m"
         ports:
-        - containerPort: 3306
+        - name: vprodb-port
+          containerPort: 3306
         env:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
